antlr4/CouncilParser.cpp

// Generated from Council.g4 by ANTLR 4.10.1


#include "CouncilListener.h"
#include "CouncilVisitor.h"

#include "CouncilParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CouncilParserStaticData final {
  CouncilParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CouncilParserStaticData(const CouncilParserStaticData&) = delete;
  CouncilParserStaticData(CouncilParserStaticData&&) = delete;
  CouncilParserStaticData& operator=(const CouncilParserStaticData&) = delete;
  CouncilParserStaticData& operator=(CouncilParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag councilParserOnceFlag;
CouncilParserStaticData *councilParserStaticData = nullptr;

void councilParserInitialize() {
  assert(councilParserStaticData == nullptr);
  auto staticData = std::make_unique<CouncilParserStaticData>(
    std::vector<std::string>{
      "parseFile", "importStmt", "type", "decVar", "assignVar", "decFunc", 
      "expr", "funcCall", "returnStmt", "ifChain", "whileLoop", "forLoop", 
      "obj", "codeBlock", "codeLine", "literal"
    },
    std::vector<std::string>{
      "", "'.'", "','", "';'", "'String'", "'Int'", "'Float'", "'Bool'", 
      "'Func'", "'import'", "'return'", "'if'", "'elif'", "'else'", "'while'", 
      "'for'", "'break'", "", "", "", "'TRUE'", "'FALSE'", "", "", "", "", 
      "'{'", "'}'", "'('", "')'", "'|'", "'+'", "'-'", "'*'", "'/'", "'//'", 
      "'%'", "'='", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='"
    },
    std::vector<std::string>{
      "", "PERIOD", "COMMA", "SEMICOLON", "STR_T", "INT_T", "FLOAT_T", "BOOL_T", 
      "FUNC", "EXTERN", "RETURN", "IF", "ELIF", "ELSE", "WHILE", "FOR", 
      "BREAK", "ID", "INT", "FLOAT", "TRUE", "FALSE", "STRING", "COMMENT", 
      "BLOCK_COMMENT", "WHITESPACE", "OPEN_BRACE", "CLOSE_BRACE", "OPEN_PAREN", 
      "CLOSE_PAREN", "BAR", "PLUS", "MINUS", "MULTI", "FLOAT_DIV", "INT_DIV", 
      "MOD", "EQUALS", "LT", "LT_EQ", "GT", "GT_EQ", "EQ", "NEQ"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  councilParserStaticData = staticData.release();
}

}

CouncilParser::CouncilParser(TokenStream *input) : CouncilParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CouncilParser::CouncilParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CouncilParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *councilParserStaticData->atn, councilParserStaticData->decisionToDFA, councilParserStaticData->sharedContextCache, options);
}

CouncilParser::~CouncilParser() {
  delete _interpreter;
}

const atn::ATN& CouncilParser::getATN() const {
  return *councilParserStaticData->atn;
}

std::string CouncilParser::getGrammarFileName() const {
  return "Council.g4";
}

const std::vector<std::string>& CouncilParser::getRuleNames() const {
  return councilParserStaticData->ruleNames;
}

const dfa::Vocabulary& CouncilParser::getVocabulary() const {
  return councilParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CouncilParser::getSerializedATN() const {
  return councilParserStaticData->serializedATN;
}


//----------------- ParseFileContext ------------------------------------------------------------------

CouncilParser::ParseFileContext::ParseFileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CouncilParser::ParseFileContext::OPEN_BRACE() {
  return getToken(CouncilParser::OPEN_BRACE, 0);
}

tree::TerminalNode* CouncilParser::ParseFileContext::CLOSE_BRACE() {
  return getToken(CouncilParser::CLOSE_BRACE, 0);
}

CouncilParser::CodeBlockContext* CouncilParser::ParseFileContext::codeBlock() {
  return getRuleContext<CouncilParser::CodeBlockContext>(0);
}

std::vector<CouncilParser::ImportStmtContext *> CouncilParser::ParseFileContext::importStmt() {
  return getRuleContexts<CouncilParser::ImportStmtContext>();
}

CouncilParser::ImportStmtContext* CouncilParser::ParseFileContext::importStmt(size_t i) {
  return getRuleContext<CouncilParser::ImportStmtContext>(i);
}

std::vector<CouncilParser::DecFuncContext *> CouncilParser::ParseFileContext::decFunc() {
  return getRuleContexts<CouncilParser::DecFuncContext>();
}

CouncilParser::DecFuncContext* CouncilParser::ParseFileContext::decFunc(size_t i) {
  return getRuleContext<CouncilParser::DecFuncContext>(i);
}


size_t CouncilParser::ParseFileContext::getRuleIndex() const {
  return CouncilParser::RuleParseFile;
}

void CouncilParser::ParseFileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParseFile(this);
}

void CouncilParser::ParseFileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParseFile(this);
}


std::any CouncilParser::ParseFileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CouncilVisitor*>(visitor))
    return parserVisitor->visitParseFile(this);
  else
    return visitor->visitChildren(this);
}

CouncilParser::ParseFileContext* CouncilParser::parseFile() {
  ParseFileContext *_localctx = _tracker.createInstance<ParseFileContext>(_ctx, getState());
  enterRule(_localctx, 0, CouncilParser::RuleParseFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(32);
    match(CouncilParser::OPEN_BRACE);
    setState(36);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CouncilParser::EXTERN) {
      setState(33);
      importStmt();
      setState(38);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(42);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CouncilParser::FUNC) {
      setState(39);
      decFunc();
      setState(44);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(45);
    match(CouncilParser::CLOSE_BRACE);
    setState(46);
    codeBlock();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportStmtContext ------------------------------------------------------------------

CouncilParser::ImportStmtContext::ImportStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CouncilParser::ImportStmtContext::EXTERN() {
  return getToken(CouncilParser::EXTERN, 0);
}

tree::TerminalNode* CouncilParser::ImportStmtContext::ID() {
  return getToken(CouncilParser::ID, 0);
}

tree::TerminalNode* CouncilParser::ImportStmtContext::OPEN_PAREN() {
  return getToken(CouncilParser::OPEN_PAREN, 0);
}

tree::TerminalNode* CouncilParser::ImportStmtContext::CLOSE_PAREN() {
  return getToken(CouncilParser::CLOSE_PAREN, 0);
}

tree::TerminalNode* CouncilParser::ImportStmtContext::SEMICOLON() {
  return getToken(CouncilParser::SEMICOLON, 0);
}

std::vector<CouncilParser::TypeContext *> CouncilParser::ImportStmtContext::type() {
  return getRuleContexts<CouncilParser::TypeContext>();
}

CouncilParser::TypeContext* CouncilParser::ImportStmtContext::type(size_t i) {
  return getRuleContext<CouncilParser::TypeContext>(i);
}

std::vector<tree::TerminalNode *> CouncilParser::ImportStmtContext::COMMA() {
  return getTokens(CouncilParser::COMMA);
}

tree::TerminalNode* CouncilParser::ImportStmtContext::COMMA(size_t i) {
  return getToken(CouncilParser::COMMA, i);
}


size_t CouncilParser::ImportStmtContext::getRuleIndex() const {
  return CouncilParser::RuleImportStmt;
}

void CouncilParser::ImportStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportStmt(this);
}

void CouncilParser::ImportStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportStmt(this);
}


std::any CouncilParser::ImportStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CouncilVisitor*>(visitor))
    return parserVisitor->visitImportStmt(this);
  else
    return visitor->visitChildren(this);
}

CouncilParser::ImportStmtContext* CouncilParser::importStmt() {
  ImportStmtContext *_localctx = _tracker.createInstance<ImportStmtContext>(_ctx, getState());
  enterRule(_localctx, 2, CouncilParser::RuleImportStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(48);
    match(CouncilParser::EXTERN);
    setState(49);
    match(CouncilParser::ID);
    setState(50);
    match(CouncilParser::OPEN_PAREN);
    setState(59);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << CouncilParser::STR_T)
      | (1ULL << CouncilParser::INT_T)
      | (1ULL << CouncilParser::FLOAT_T)
      | (1ULL << CouncilParser::BOOL_T))) != 0)) {
      setState(51);
      type();
      setState(56);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == CouncilParser::COMMA) {
        setState(52);
        match(CouncilParser::COMMA);
        setState(53);
        type();
        setState(58);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(61);
    match(CouncilParser::CLOSE_PAREN);
    setState(62);
    match(CouncilParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

CouncilParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CouncilParser::TypeContext::getRuleIndex() const {
  return CouncilParser::RuleType;
}

void CouncilParser::TypeContext::copyFrom(TypeContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- TypeStrContext ------------------------------------------------------------------

tree::TerminalNode* CouncilParser::TypeStrContext::STR_T() {
  return getToken(CouncilParser::STR_T, 0);
}

CouncilParser::TypeStrContext::TypeStrContext(TypeContext *ctx) { copyFrom(ctx); }

void CouncilParser::TypeStrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeStr(this);
}
void CouncilParser::TypeStrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeStr(this);
}

std::any CouncilParser::TypeStrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CouncilVisitor*>(visitor))
    return parserVisitor->visitTypeStr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TypeIntContext ------------------------------------------------------------------

tree::TerminalNode* CouncilParser::TypeIntContext::INT_T() {
  return getToken(CouncilParser::INT_T, 0);
}

CouncilParser::TypeIntContext::TypeIntContext(TypeContext *ctx) { copyFrom(ctx); }

void CouncilParser::TypeIntContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeInt(this);
}
void CouncilParser::TypeIntContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeInt(this);
}

std::any CouncilParser::TypeIntContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CouncilVisitor*>(visitor))
    return parserVisitor->visitTypeInt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TypeFloatContext ------------------------------------------------------------------

tree::TerminalNode* CouncilParser::TypeFloatContext::FLOAT_T() {
  return getToken(CouncilParser::FLOAT_T, 0);
}

CouncilParser::TypeFloatContext::TypeFloatContext(TypeContext *ctx) { copyFrom(ctx); }

void CouncilParser::TypeFloatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeFloat(this);
}
void CouncilParser::TypeFloatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeFloat(this);
}

std::any CouncilParser::TypeFloatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CouncilVisitor*>(visitor))
    return parserVisitor->visitTypeFloat(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TypeBoolContext ------------------------------------------------------------------

tree::TerminalNode* CouncilParser::TypeBoolContext::BOOL_T() {
  return getToken(CouncilParser::BOOL_T, 0);
}

CouncilParser::TypeBoolContext::TypeBoolContext(TypeContext *ctx) { copyFrom(ctx); }

void CouncilParser::TypeBoolContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeBool(this);
}
void CouncilParser::TypeBoolContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeBool(this);
}

std::any CouncilParser::TypeBoolContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CouncilVisitor*>(visitor))
    return parserVisitor->visitTypeBool(this);
  else
    return visitor->visitChildren(this);
}
CouncilParser::TypeContext* CouncilParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 4, CouncilParser::RuleType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(68);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CouncilParser::STR_T: {
        _localctx = _tracker.createInstance<CouncilParser::TypeStrContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(64);
        match(CouncilParser::STR_T);
        break;
      }

      case CouncilParser::INT_T: {
        _localctx = _tracker.createInstance<CouncilParser::TypeIntContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(65);
        match(CouncilParser::INT_T);
        break;
      }

      case CouncilParser::FLOAT_T: {
        _localctx = _tracker.createInstance<CouncilParser::TypeFloatContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(66);
        match(CouncilParser::FLOAT_T);
        break;
      }

      case CouncilParser::BOOL_T: {
        _localctx = _tracker.createInstance<CouncilParser::TypeBoolContext>(_localctx);
        enterOuterAlt(_localctx, 4);
        setState(67);
        match(CouncilParser::BOOL_T);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DecVarContext ------------------------------------------------------------------

CouncilParser::DecVarContext::DecVarContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CouncilParser::TypeContext* CouncilParser::DecVarContext::type() {
  return getRuleContext<CouncilParser::TypeContext>(0);
}

CouncilParser::AssignVarContext* CouncilParser::DecVarContext::assignVar() {
  return getRuleContext<CouncilParser::AssignVarContext>(0);
}


size_t CouncilParser::DecVarContext::getRuleIndex() const {
  return CouncilParser::RuleDecVar;
}

void CouncilParser::DecVarContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecVar(this);
}

void CouncilParser::DecVarContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecVar(this);
}


std::any CouncilParser::DecVarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CouncilVisitor*>(visitor))
    return parserVisitor->visitDecVar(this);
  else
    return visitor->visitChildren(this);
}

CouncilParser::DecVarContext* CouncilParser::decVar() {
  DecVarContext *_localctx = _tracker.createInstance<DecVarContext>(_ctx, getState());
  enterRule(_localctx, 6, CouncilParser::RuleDecVar);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    type();
    setState(71);
    assignVar();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignVarContext ------------------------------------------------------------------

CouncilParser::AssignVarContext::AssignVarContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CouncilParser::AssignVarContext::ID() {
  return getToken(CouncilParser::ID, 0);
}

tree::TerminalNode* CouncilParser::AssignVarContext::EQUALS() {
  return getToken(CouncilParser::EQUALS, 0);
}

CouncilParser::ExprContext* CouncilParser::AssignVarContext::expr() {
  return getRuleContext<CouncilParser::ExprContext>(0);
}


size_t CouncilParser::AssignVarContext::getRuleIndex() const {
  return CouncilParser::RuleAssignVar;
}

void CouncilParser::AssignVarContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignVar(this);
}

void CouncilParser::AssignVarContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignVar(this);
}


std::any CouncilParser::AssignVarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CouncilVisitor*>(visitor))
    return parserVisitor->visitAssignVar(this);
  else
    return visitor->visitChildren(this);
}

CouncilParser::AssignVarContext* CouncilParser::assignVar() {
  AssignVarContext *_localctx = _tracker.createInstance<AssignVarContext>(_ctx, getState());
  enterRule(_localctx, 8, CouncilParser::RuleAssignVar);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    match(CouncilParser::ID);
    setState(74);
    match(CouncilParser::EQUALS);
    setState(75);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DecFuncContext ------------------------------------------------------------------

CouncilParser::DecFuncContext::DecFuncContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CouncilParser::DecFuncContext::FUNC() {
  return getToken(CouncilParser::FUNC, 0);
}

std::vector<tree::TerminalNode *> CouncilParser::DecFuncContext::ID() {
  return getTokens(CouncilParser::ID);
}

tree::TerminalNode* CouncilParser::DecFuncContext::ID(size_t i) {
  return getToken(CouncilParser::ID, i);
}

tree::TerminalNode* CouncilParser::DecFuncContext::OPEN_PAREN() {
  return getToken(CouncilParser::OPEN_PAREN, 0);
}

std::vector<CouncilParser::TypeContext *> CouncilParser::DecFuncContext::type() {
  return getRuleContexts<CouncilParser::TypeContext>();
}

CouncilParser::TypeContext* CouncilParser::DecFuncContext::type(size_t i) {
  return getRuleContext<CouncilParser::TypeContext>(i);
}

tree::TerminalNode* CouncilParser::DecFuncContext::CLOSE_PAREN() {
  return getToken(CouncilParser::CLOSE_PAREN, 0);
}

CouncilParser::CodeBlockContext* CouncilParser::DecFuncContext::codeBlock() {
  return getRuleContext<CouncilParser::CodeBlockContext>(0);
}

std::vector<tree::TerminalNode *> CouncilParser::DecFuncContext::COMMA() {
  return getTokens(CouncilParser::COMMA);
}

tree::TerminalNode* CouncilParser::DecFuncContext::COMMA(size_t i) {
  return getToken(CouncilParser::COMMA, i);
}


size_t CouncilParser::DecFuncContext::getRuleIndex() const {
  return CouncilParser::RuleDecFunc;
}

void CouncilParser::DecFuncContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecFunc(this);
}

void CouncilParser::DecFuncContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecFunc(this);
}


std::any CouncilParser::DecFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CouncilVisitor*>(visitor))
    return parserVisitor->visitDecFunc(this);
  else
    return visitor->visitChildren(this);
}

CouncilParser::DecFuncContext* CouncilParser::decFunc() {
  DecFuncContext *_localctx = _tracker.createInstance<DecFuncContext>(_ctx, getState());
  enterRule(_localctx, 10, CouncilParser::RuleDecFunc);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    match(CouncilParser::FUNC);
    setState(78);
    match(CouncilParser::ID);
    setState(79);
    match(CouncilParser::OPEN_PAREN);
    setState(80);
    type();
    setState(87);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CouncilParser::COMMA) {
      setState(81);
      match(CouncilParser::COMMA);
      setState(82);
      type();
      setState(83);
      match(CouncilParser::ID);
      setState(89);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(90);
    match(CouncilParser::CLOSE_PAREN);
    setState(91);
    codeBlock();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

CouncilParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CouncilParser::ExprContext::getRuleIndex() const {
  return CouncilParser::RuleExpr;
}

void CouncilParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- PreMinusExprContext ------------------------------------------------------------------

tree::TerminalNode* CouncilParser::PreMinusExprContext::MINUS() {
  return getToken(CouncilParser::MINUS, 0);
}

CouncilParser::ExprContext* CouncilParser::PreMinusExprContext::expr() {
  return getRuleContext<CouncilParser::ExprContext>(0);
}

CouncilParser::PreMinusExprContext::PreMinusExprContext(ExprContext *ctx) { copyFrom(ctx); }

void CouncilParser::PreMinusExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPreMinusExpr(this);
}
void CouncilParser::PreMinusExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPreMinusExpr(this);
}

std::any CouncilParser::PreMinusExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CouncilVisitor*>(visitor))
    return parserVisitor->visitPreMinusExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PlusMinusExprContext ------------------------------------------------------------------

std::vector<CouncilParser::ExprContext *> CouncilParser::PlusMinusExprContext::expr() {
  return getRuleContexts<CouncilParser::ExprContext>();
}

CouncilParser::ExprContext* CouncilParser::PlusMinusExprContext::expr(size_t i) {
  return getRuleContext<CouncilParser::ExprContext>(i);
}

tree::TerminalNode* CouncilParser::PlusMinusExprContext::PLUS() {
  return getToken(CouncilParser::PLUS, 0);
}

tree::TerminalNode* CouncilParser::PlusMinusExprContext::MINUS() {
  return getToken(CouncilParser::MINUS, 0);
}

CouncilParser::PlusMinusExprContext::PlusMinusExprContext(ExprContext *ctx) { copyFrom(ctx); }

void CouncilParser::PlusMinusExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPlusMinusExpr(this);
}
void CouncilParser::PlusMinusExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CouncilListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPlusMinusExpr(this);
}

std::any CouncilParser::PlusMinusExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CouncilVisitor*>(visitor))
    return parserVisitor->visitPlusMinusExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ObjExprContext ------------------------------------------------------------------

CouncilParser::ObjContext* CouncilParser::ObjExprContext::obj() {
  return getRuleContext<CouncilParser::ObjContext>(0);
}

CouncilParser::ObjExprContext::ObjExprContext(ExprContext *ctx) { copyFrom(ctx); }
